intel/bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/log.txt
bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main.c:36:11: error: assigning to 'enum (anonymous enum at bench_214/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main/extr_.tenginesrccorengx_parse_time.c_ngx_parse_http_time_with_main.c:29:5)' from incompatible type 'int'
    fmt = 0;
          ^
1 error generated.
HLS FPGA Parse FAILED.
